/*
 * Copyright 2016 Google Inc. All Rights Reserved.
 * Use of this source code is governed by a BSD-style
 * license that can be found in the LICENSE file or at
 * https://developers.google.com/open-source/licenses/bsd
 */

syntax = "proto3";

package google.api.gax.grpc;

service TestService {
  rpc DoSimple(SimpleRequest) returns (SimpleResponse);
}

// Messages required for testing

message BundlingRequest {
  string name = 1;
  repeated string entries = 2;
}

message BundlingResponse {
  string name = 1;
  repeated string entries = 2;
}

message SimpleRequest {
  string name = 1;
}

message SimpleResponse {
  string name = 2;
}

message PageStreamingRequest {
  string page_token = 1;
  int32 page_size = 2;
  string check = 3;
}

message PageStreamingResponse {
  repeated int32 items = 1;
  string next_page_token = 2;
}
